--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
@@ -55,5 +54,10 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "php artisan optimize",
+        "chmod -R 777 public/"
+    ]
 }
