--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,11 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "chmod -R 777 public/"
         ]
     },
     "config": {
@@ -54,10 +59,5 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "post-install-cmd": [
-        "php artisan clear-compiled",
-        "php artisan optimize",
-        "chmod -R 777 public/"
-    ]
+    "prefer-stable": true
 }
